# Boogie_emeddedSW_2020

./: README.md
Load_JetsonTX2/: smart_logi_system_jetson.py
Robot/Master/turtlebot3_manipulation/turtlebot3_manipulation_gui/: CMakeLists.txt  package.xml
Robot/Master/turtlebot3_manipulation/turtlebot3_manipulation_gui/include/turtlebot3_manipulation_gui/: main_window.hpp  qnode.hpp
Robot/Master/turtlebot3_manipulation/turtlebot3_manipulation_gui/src/: main.cpp  main_window.cpp  qnode.cpp  ros_tutorial_msg_subscriber.cpp
Robot/SBC/turtlebot3_manipulation/turtlebot3_manipulation_bringup/: package.xml
Robot/SBC/turtlebot3_manipulation/turtlebot3_manipulation_bringup/include/turtlebot3_manipulation_bringup/: turtlebot3_manipulation_bringup.h
Robot/SBC/turtlebot3_manipulation/turtlebot3_manipulation_bringup/src/: turtlebot3_manipulation_bringup.cpp
