<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_manipulation_bringup</name>
  <version>2.0.2</version>
  <description>ROS package for turtlebot3_manipulation_bringup</description>

  <license>Apache 2.0</license>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
</package>
